# icidasset-template

./: .gitignore  Justfile  README.md  icidasset-template.cabal  package.json  package.yaml
Css/: Core.css  Main.css  Tailwind.js  postcss.config.js
Css/Core/: Blockquote.css  Button.css  Code.css  Forms.css  Header.css  Lists.css  Misc.css  Spinner.css
Elm/: Chunky.elm  Common.elm
Elm/Views/: Block.elm  Icon.elm  LoadingScreen.elm  MessageScreen.elm  Spinner.elm
Haskell/: Chunky.hs  Common.hs  Html.hs  Types.hs
Haskell/Components/: Block.hs  Header.hs  Icon.hs  LoadingScreen.hs  LoadingScreenScript.hs
Haskell/Html/: Attributes.hs  Custom.hs
Haskell/Layouts/: Application.hs  Writing.hs
Haskell/List/: Ext.hs
Haskell/Renderers/: Lucid.hs  Markdown.hs
Haskell/Shikensu/: Functions.hs
Icons/: demo.html
css/: index.css
css/abstract/: mixins.css  variables.css
css/base/: base.css  custom-selectors.css
css/components/: action.css  block.css  blockquote.css  blocks.css  button.css  code.css  container.css  data-list.css  form.css  header.css  hide.css  icon.css  roughly-centered.css  select-box.css  small.css  spinner.css  table.css
css/extra-components/: roughly-centered.css
elm/: Utils.elm
elm/Views/: AuthScreen.elm  FullscreenMessage.elm  Icon.elm  MessageScreen.elm
haskell/: Attributes.hs  Elements.hs  Html.hs  Server.hs  Template.hs  Types.hs  Utilities.hs
haskell/Components/: Header.hs  Icon.hs  LoadingScreen.hs  LoadingScreenScript.hs
haskell/Components/Blocks/: Filler.hs
haskell/Html/: Attributes.hs  Custom.hs
haskell/Layouts/: Application.hs  Writing.hs
haskell/Renderers/: Lucid.hs  Markdown.hs
haskell/Shikensu/: Functions.hs
icons/: icidasset.icomoon.json  style.css
system/: Types.hs  Utilities.hs
system/Renderers/: Lucid.hs
system/Shikensu/: Functions.hs
templates/: Attributes.hs  Elements.hs
templates/Components/: Header.hs  Icon.hs
templates/Components/Blocks/: Filler.hs
templates/Layouts/: Application.hs  Writing.hs
