name: icidasset-template
version: 1.0.0

build-type: Simple
cabal-version: >= 1.10

author: Steven Vandevelde
maintainer: icid.asset@gmail.com


library
  default-language:
    Haskell2010

  default-extensions:
    ExtendedDefaultRules
    OverloadedStrings

  hs-source-dirs:
    haskell

  exposed-modules:
    Attributes
    Components.Blocks.Filler
    Components.Header
    Components.Icon
    Components.LoadingScreen
    Components.LoadingScreenScript
    Elements
    Layouts.Application
    Layouts.Writing
    Renderers.Lucid
    Renderers.Markdown
    Shikensu.Functions
    Template
    Types
    Utilities

  build-depends:
    aeson == 1.0.*,
    base,
    bytestring == 0.10.*,
    cmark == 0.5.*,
    directory == 1.3.*,
    flow == 1.*,
    frontmatter == 0.1.*,
    lucid == 2.9.*,
    shikensu == 0.3.3,
    text == 1.*,
    unordered-containers == 0.2.*,
    yaml == 0.8.*


executable server
  default-language:
    Haskell2010

  default-extensions:
    OverloadedStrings

  hs-source-dirs:
    haskell

  main-is:
    Server.hs

  build-depends:
    base,
    http-types == 0.9.*,
    wai == 3.2.*,
    wai-app-static == 3.1.*,
    warp == 3.2.*

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
